[gd_scene load_steps=6 format=3 uid="uid://bph5l6v1wjfk0"]

[ext_resource type="Script" path="res://MarkCircle.gd" id="1_7uv16"]
[ext_resource type="Texture2D" uid="uid://bc36sd57osaio" path="res://mark_1.png" id="2_6yb0u"]
[ext_resource type="Texture2D" uid="uid://cxv6cclojweud" path="res://mark_2.png" id="3_76g46"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vehrq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6yb0u")
}, {
"duration": 1.0,
"texture": ExtResource("3_76g46")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oxoj0"]
radius = 32.0624

[node name="MarkCircle" type="Area2D" groups=["circles"]]
position = Vector2(32, 33)
script = ExtResource("1_7uv16")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vehrq")
frame = 1
frame_progress = 0.350198

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oxoj0")

[node name="Label" type="Label" parent="."]
offset_left = 38.0
offset_top = -13.0
offset_right = 99.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 23

[node name="Timer" type="Timer" parent="."]
wait_time = 0.03

[connection signal="mouse_entered" from="." to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
